# ritest

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  __init__.py  ci.py  core.py  pyproject.toml  ritest.py
.github/workflows/: ci.yml  draft-pdf.yml
benchmarks/: colombia.py  compare_to_stata.py
benchmarks/R/: colombia.R
benchmarks/Stata/: ci_bands.do  colombia.do  compare_to_python.do
benchmarks/data/: clusterColombia.dta  colombia.csv  ritest_testdata.csv
demos/: demo_fast_basic.py
documentation/benchmarks/: run_all_benchmarks.py
documentation/benchmarks/ci-bands/data/: ci_bands.csv
documentation/benchmarks/ci-bands/output/: python_ci_band-20251222.csv  python_summary-20251222.txt  python_summary.txt  stata-20251222.txt  stata.txt
documentation/benchmarks/ci-bands/scripts/: 01_gen_data.do  02_run_python.py  03_run_stata.do
documentation/benchmarks/colombia/output/logs/: colombia_ritest_summary-20251222.txt  colombia_ritest_summary.txt
documentation/benchmarks/colombia/output/tables/: colombia_ritest_summary.txt  (+1 more)
documentation/benchmarks/colombia/scripts/: colombia.R  colombia.do  colombia.py
documentation/benchmarks/linear-vs-generic/data/: simulated_data.csv
documentation/benchmarks/linear-vs-generic/output/: python_generic-20251222.txt  python_generic.txt  python_linear-20251222.txt  python_linear.txt  r-20251222.txt  r.txt  stata-20251222.txt  stata.txt
documentation/benchmarks/linear-vs-generic/scripts/: 01_make_simulated_data.py  02_run_python.py  03_run_r.R  04_run_stata.do
documentation/benchmarks/output/: python_benchmark_summary_20251222_095330.csv
documentation/examples/: custom_stats.py  did.py  multi_arm.py  non_linear.py  results_object.py
documentation/examples/output/: did_equivalence.txt  example_custom_stats_01.txt  example_custom_stats_02.txt  example_custom_stats_03.txt  example_custom_stats_04.txt  example_custom_stats_05.txt  example_nonlinear_01.txt  example_nonlinear_02.txt  example_nonlinear_03.txt  example_nonlinear_04.txt  example_nonlinear_05.txt  example_nonlinear_06.txt  example_results_object.txt  multi_keep_B_fixed_in_RI.txt  multiarm_drop_B.txt  multiarm_keep_B_fixed_in_RI.txt  option1_drop_B.txt  option2_keep_B_fixed_in_RI.txt
paper/: paper.bib  paper.md
ritest/: __init__.py  config.py  core.py  results.py  run.py  validation.py
ritest/ci/: coef_ci.py  pvalue_ci.py
ritest/engine/: fast_ols.py  shuffle.py
ritest/legacy-slow/: __init__.py  ci.py  config.py  core.py  ritest-legacy.py
tests/: README.md  colombia.py  compare_to_stata.py  core_function.py  ritest_testdata.csv  stata_checks.do  test_coef_ci.py  test_config.py  test_fast_ols.py  test_integration_fast.py  test_integration_generic.py  test_public_api.py  test_pvalue_ci.py  test_results.py  test_run.py  test_shuffle.py  test_validation.py
tests/R/: colombia.R
tests/Stata/: colombia.do  compare_to_python.do
tests/data/: colombia.csv  ritest_testdata.csv
