[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ritest"
version = "0.1.0"
description = "Randomization inference in Python."
readme = "README.md"
requires-python = ">=3.10"

license = { file = "LICENSE" }

authors = [
  { name = "Tabaré Capitán"}
]

# Core runtime dependencies: required for the package to function.
dependencies = [
  "numpy",
  "pandas",
  "patsy",
  "scipy",
]

# Trove classifiers: help users discover the package.
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
# Extra for coefficient-profile plotting (RitestResult.plot)
plot = [
  "matplotlib",
]

# Extra for Numba-accelerated permutation / OLS paths.
numba = [
  "numba",
]

[project.urls]
# PENDING PENDING PENDING PENDING PENDING PENDING PENDING PENDING PENDING PENDING PENDING
homepage = "https://tabarecapitan.com/projects/ritest"
repository = "https://github.com/YOUR_USERNAME/ritest"
issues = "https://github.com/tabareCapitan/ritest/issues"

[tool.setuptools]
[tool.setuptools.packages.find]
where = ["."]
include = ["ritest*"]
exclude = ["tests*", "temp_tests*"]
